# middlewarejson-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: balancer_cmd.rs  catalog_cmd.rs  ctx.rs  groups_cmd.rs  interactive.rs  main.rs  run_server.rs  service_cmd.rs  settings_cmd.rs  sync_cmd.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  country_flags.rs  fingerprint.rs  lib.rs
crates/core/src/db/: database.rs  mod.rs  repository.rs  schema.rs
crates/core/src/models/: balancer.rs  inbound.rs  mod.rs  nodes.rs  panel_inbound.rs  rules_schema.rs  subscription.rs
crates/core/src/services/: catalog_sync.rs  client_sync.rs  matching.rs  mod.rs  panel_api.rs  panel_sync.rs  profile_builder.rs  systemd_service.rs  transform_service.rs  transformer.rs  upstream.rs
crates/core/src/transform/: mod.rs  rules_engine.rs
crates/core/tests/: country_flags_tests.rs  fingerprint_tests.rs  repository_scope_tests.rs  rules_engine_tests.rs  systemd_service_tests.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
deploy/: middlewarejson.service  nginx.conf.example  update.sh
docs/: CONFIGURATION.md  DEPLOY.md  TZ.md
tests/fixtures/: panel_clients_lookup.json  panel_group_emails.json  panel_groups_list.json  panel_inbounds_list.json  raw_3xui_subscription.json  sample_nodes.json  sample_sub.json
