[workspace]
resolver = "2"
members = ["crates/core", "crates/server", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["middlewarejson contributors"]

[workspace.dependencies]
middlewarejson-core = { path = "crates/core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
regex = "1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
async-trait = "0.1"
comfy-table = "7"

[profile.release]
lto = true
codegen-units = 1
strip = true